--- a/mmex/setup/linux/debian/control
+++ b/mmex/setup/linux/debian/control
@@ -1,11 +1,22 @@
-Package: mmex
-Version: 0.9.9.2
+Source: mmex
 Section: misc
-Priority: optional
-Architecture: i386
-Depends: libc6 (>= 2.3.5-1), libwxgtk2.8-0 (>=2.8.0)
-Installed-Size: 8200
-Maintainer: Nikolay Akimov <vomikan@mail.ru>
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Priority: extra
+Maintainer: Nikolay <vomikan@mail.ru>
+Build-Depends: debhelper (>= 8.0.0), autotools-dev, libwxgtk2.8-dev (>= 2.8.0), libboost-dev (>= 1.48.0), python-dev (>= 2.7.3), libreadline-dev (>=6.2)
+Standards-Version: 3.9.2
+Homepage: https://sourceforge.net/projects/moneymanagerex
+#Vcs-Git: git://git.debian.org/collab-maint/mmex.git
+#Vcs-Browser: http://git.debian.org/?p=collab-maint/mmex.git;a=summary
 
+Package: mmex
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6 (>= 2.3.5-1), libwxgtk2.8-0 (>= 2.8.0)
+Description: Simple to use financial management software
+ Money  Manager  Ex (MMEX) is a free, open-source,
+ cross-platform, easy-to-use personal finance software.
+ It primarily helps organize one`s finances and keeps
+ track of where, when and how the money goes.
+ MMEX includes all the basic features that 90% of users
+ would want to see in a personal finance application.
+ The design goals are to concentrate  on  simplicity
+ and  user friendliness - something one can use everyday.
