--- a/mmex/Makefile.in
+++ b/mmex/Makefile.in
@@ -52,8 +52,45 @@ SQLITE_CFLAGS = -DSQLITE_CORE -DSQLITE_HAS_CODEC \
 	-DSQLITE_ENABLE_COLUMN_METADATA $(PIC_FLAG) $(CPPFLAGS) $(CFLAGS)
 SQLITE_OBJECTS =  \
 	sqlite_sqlite3secure.o
-MMEX_CXXFLAGS = -I$(srcdir)/lib/sqlite -I$(srcdir)/lib/wxsqlite -DNOPCH \
-	$(WX_CXXFLAGS) $(PIC_FLAG) $(CPPFLAGS) $(CXXFLAGS)
+LUA_CFLAGS =     $(PIC_FLAG) $(CPPFLAGS) $(CFLAGS)
+LUA_OBJECTS =  \
+	lua_lapi.o \
+	lua_lauxlib.o \
+	lua_lbaselib.o \
+	lua_lbitlib.o \
+	lua_lcode.o \
+	lua_lcorolib.o \
+	lua_lctype.o \
+	lua_ldblib.o \
+	lua_ldebug.o \
+	lua_ldo.o \
+	lua_ldump.o \
+	lua_lfunc.o \
+	lua_lgc.o \
+	lua_linit.o \
+	lua_liolib.o \
+	lua_llex.o \
+	lua_lmathlib.o \
+	lua_lmem.o \
+	lua_loadlib.o \
+	lua_lobject.o \
+	lua_lopcodes.o \
+	lua_loslib.o \
+	lua_lparser.o \
+	lua_lstate.o \
+	lua_lstring.o \
+	lua_lstrlib.o \
+	lua_ltable.o \
+	lua_ltablib.o \
+	lua_ltm.o \
+	lua_lua.o \
+	lua_luac.o \
+	lua_lundump.o \
+	lua_lvm.o \
+	lua_lzio.o
+MMEX_CXXFLAGS = -I$(srcdir)/lib/sqlite -I$(srcdir)/lib/wxsqlite \
+	-I$(srcdir)/lib/lua/src -DNOPCH $(WX_CXXFLAGS) $(PIC_FLAG) $(CPPFLAGS) \
+	$(CXXFLAGS)
 MMEX_OBJECTS =  \
 	mmex_aboutdialog.o \
 	mmex_appstartdialog.o \
@@ -77,7 +114,7 @@ MMEX_OBJECTS =  \
 	mmex_filtertransdialog.o \
 	mmex_guiid.o \
 	mmex_htmlbuilder.o \
-	mmex_led.o \
+	mmex_lua_interface.o \
 	mmex_maincurrencydialog.o \
 	mmex_mmaccount.o \
 	mmex_mmcategory.o \
@@ -85,6 +122,7 @@ MMEX_OBJECTS =  \
 	mmex_mmcoredb.o \
 	mmex_mmcurrency.o \
 	mmex_mmex.o \
+	mmex_mmex_settings.o \
 	mmex_mmgraphgenerator.o \
 	mmex_mmgraphincexpensesmonth.o \
 	mmex_mmgraphpie.o \
@@ -94,30 +132,15 @@ MMEX_OBJECTS =  \
 	mmex_mmpayee.o \
 	mmex_mmreportspanel.o \
 	mmex_mmtransaction.o \
-	mmex_mmyahoo.o \
 	mmex_newacctdialog.o \
 	mmex_optionsdialog.o \
 	mmex_paths.o \
 	mmex_payeedialog.o \
-	mmex_qifimport.o \
+	mmex_qif_export.o \
+	mmex_qif_import.o \
 	mmex_recentfiles.o \
 	mmex_relocatecategorydialog.o \
 	mmex_relocatepayeedialog.o \
-	mmex_reportbudget.o \
-	mmex_reportbudgetcategorysummary.o \
-	mmex_reportbudgetingperf.o \
-	mmex_reportcashflow.o \
-	mmex_reportcategexp.o \
-	mmex_reportcategovertimeperf.o \
-	mmex_reportincexpenses.o \
-	mmex_reportincexpensesfinancialperiod.o \
-	mmex_reportincexpesestime.o \
-	mmex_reportpayee.o \
-	mmex_reportsummary.o \
-	mmex_reportsummaryassets.o \
-	mmex_reportsummarystocks.o \
-	mmex_reporttransactions.o \
-	mmex_reporttransstats.o \
 	mmex_splitdetailsdialog.o \
 	mmex_splittransactionsdialog.o \
 	mmex_stockdialog.o \
@@ -126,7 +149,35 @@ MMEX_OBJECTS =  \
 	mmex_transdialog.o \
 	mmex_univcsvdialog.o \
 	mmex_util.o \
-	mmex_yahoosettingsdialog.o \
+	mmex_budget.o \
+	mmex_budgetcategorysummary.o \
+	mmex_budgetingperf.o \
+	mmex_cashflow.o \
+	mmex_categexp.o \
+	mmex_categovertimeperf.o \
+	mmex_incexpenses.o \
+	mmex_incexpensesfinancialperiod.o \
+	mmex_incexpesestime.o \
+	mmex_payee.o \
+	mmex_summary.o \
+	mmex_summaryassets.o \
+	mmex_summarystocks.o \
+	mmex_transactions.o \
+	mmex_trx_stats.o \
+	mmex_account.o \
+	mmex_assets.o \
+	mmex_budget_table.o \
+	mmex_budget_year.o \
+	mmex_category.o \
+	mmex_currency.o \
+	mmex_entry_base.o \
+	mmex_payee_table.o \
+	mmex_settings.o \
+	mmex_splittransaction.o \
+	mmex_stocks.o \
+	mmex_subcategory.o \
+	mmex_transaction.o \
+	mmex_transactionbill.o \
 	mmex_platfdep.o \
 	$(__mmex___win32rc)
 
@@ -146,11 +197,11 @@ COND_PLATFORM_OS2_1___mmex___os2_emxbindcmd = $(NM) mmex$(EXEEXT) | if grep -q \
 
 ### Targets: ###
 
-all: $(LIBPREFIX)wxsqlite$(LIBEXT) $(LIBPREFIX)sqlite$(LIBEXT) mmex$(EXEEXT) po
+all: $(LIBPREFIX)wxsqlite$(LIBEXT) $(LIBPREFIX)sqlite$(LIBEXT) $(LIBPREFIX)lua$(LIBEXT) mmex$(EXEEXT) po
 
 install: install_mmex
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/mmex/res
-	(cd $(srcdir)/resources ; $(INSTALL_DATA)  kaching.wav mmex.ico currency_seed.db3 $(DESTDIR)$(datadir)/mmex/res)
+	(cd $(srcdir)/resources ; $(INSTALL_DATA)  kaching.wav mmex.ico currency_seed.csv $(DESTDIR)$(datadir)/mmex/res)
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/mmex/po
 	(cd $(srcdir)/po ; $(INSTALL_DATA)  *.mo $(DESTDIR)$(datadir)/mmex/po)
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/doc/mmex
@@ -161,6 +212,8 @@ install: install_mmex
 	(cd $(srcdir)/doc/help/german ; $(INSTALL_DATA)  * $(DESTDIR)$(datadir)/doc/mmex/help/german)
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/doc/mmex/help/french
 	(cd $(srcdir)/doc/help/french ; $(INSTALL_DATA)  * $(DESTDIR)$(datadir)/doc/mmex/help/french)
+	$(INSTALL_DIR) $(DESTDIR)$(datadir)/doc/mmex/help/hungarian
+	(cd $(srcdir)/doc/help/hungarian ; $(INSTALL_DATA)  * $(DESTDIR)$(datadir)/doc/mmex/help/hungarian)
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/doc/mmex/help/italian
 	(cd $(srcdir)/doc/help/italian ; $(INSTALL_DATA)  * $(DESTDIR)$(datadir)/doc/mmex/help/italian)
 	$(INSTALL_DIR) $(DESTDIR)$(datadir)/doc/mmex/help/polish
@@ -177,12 +230,13 @@ install: install_mmex
 	(cd $(srcdir)/doc ; $(INSTALL_DATA)  mmex.1.gz $(DESTDIR)$(datadir)/man/man1)
 
 uninstall: uninstall_mmex
-	(cd $(DESTDIR)$(datadir)/mmex/res ; rm -f kaching.wav mmex.ico splash.png currency_seed.db3)
+	(cd $(DESTDIR)$(datadir)/mmex/res ; rm -f kaching.wav mmex.ico currency_seed.csv)
 	(cd $(DESTDIR)$(datadir)/mmex/po ; rm -f *.mo)
 	(cd $(DESTDIR)$(datadir)/doc/mmex ; rm -f *.txt)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help ; rm -f *.html *.png)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help/german ; rm -f *)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help/french ; rm -f *)
+	(cd $(DESTDIR)$(datadir)/doc/mmex/help/hungarian ; rm -f *)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help/italian ; rm -f *)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help/polish ; rm -f *)
 	(cd $(DESTDIR)$(datadir)/doc/mmex/help/russian ; rm -f *)
@@ -199,6 +253,7 @@ clean:
 	rm -f ./*.o
 	rm -f $(LIBPREFIX)wxsqlite$(LIBEXT)
 	rm -f $(LIBPREFIX)sqlite$(LIBEXT)
+	rm -f $(LIBPREFIX)lua$(LIBEXT)
 	rm -f mmex$(EXEEXT)
 	-(cd $(srcdir)/po && $(MAKE) clean)
 	-(cd ./src/tests && $(MAKE) clean)
@@ -218,8 +273,13 @@ $(LIBPREFIX)sqlite$(LIBEXT): $(SQLITE_OBJECTS)
 	$(AR) $(AROPTIONS) $@ $(SQLITE_OBJECTS)
 	$(RANLIB) $@
 
-mmex$(EXEEXT): $(MMEX_OBJECTS) $(LIBPREFIX)wxsqlite$(LIBEXT) $(LIBPREFIX)sqlite$(LIBEXT) $(__mmex___win32rc)
-	$(CXX) -o $@ $(MMEX_OBJECTS) -L. -L.   $(WX_LIBS) $(LDFLAGS_GUI) $(LDFLAGS)  -lwxsqlite -lsqlite $(LIBS)
+$(LIBPREFIX)lua$(LIBEXT): $(LUA_OBJECTS)
+	rm -f $@
+	$(AR) $(AROPTIONS) $@ $(LUA_OBJECTS)
+	$(RANLIB) $@
+
+mmex$(EXEEXT): $(MMEX_OBJECTS) $(LIBPREFIX)wxsqlite$(LIBEXT) $(LIBPREFIX)sqlite$(LIBEXT) $(LIBPREFIX)lua$(LIBEXT) $(__mmex___win32rc)
+	$(CXX) -o $@ $(MMEX_OBJECTS) -L. -L. -L.   $(WX_LIBS) $(LDFLAGS_GUI) $(LDFLAGS)  -lwxsqlite -lsqlite -llua $(LIBS)
 	
 	$(__mmex___mac_setfilecmd)
 	$(__mmex___os2_emxbindcmd)
@@ -242,6 +302,108 @@ wxsqlite_wxsqlite3.o: $(srcdir)/lib/wxsqlite/wxsqlite3.cpp
 
 sqlite_sqlite3secure.o: $(srcdir)/lib/sqlite/sqlite3secure.c
 	$(CCC) -c -o $@ $(SQLITE_CFLAGS) $(srcdir)/lib/sqlite/sqlite3secure.c
+
+lua_lapi.o: $(srcdir)/lib/lua/src/lapi.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lapi.c
+
+lua_lauxlib.o: $(srcdir)/lib/lua/src/lauxlib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lauxlib.c
+
+lua_lbaselib.o: $(srcdir)/lib/lua/src/lbaselib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lbaselib.c
+
+lua_lbitlib.o: $(srcdir)/lib/lua/src/lbitlib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lbitlib.c
+
+lua_lcode.o: $(srcdir)/lib/lua/src/lcode.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lcode.c
+
+lua_lcorolib.o: $(srcdir)/lib/lua/src/lcorolib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lcorolib.c
+
+lua_lctype.o: $(srcdir)/lib/lua/src/lctype.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lctype.c
+
+lua_ldblib.o: $(srcdir)/lib/lua/src/ldblib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ldblib.c
+
+lua_ldebug.o: $(srcdir)/lib/lua/src/ldebug.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ldebug.c
+
+lua_ldo.o: $(srcdir)/lib/lua/src/ldo.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ldo.c
+
+lua_ldump.o: $(srcdir)/lib/lua/src/ldump.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ldump.c
+
+lua_lfunc.o: $(srcdir)/lib/lua/src/lfunc.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lfunc.c
+
+lua_lgc.o: $(srcdir)/lib/lua/src/lgc.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lgc.c
+
+lua_linit.o: $(srcdir)/lib/lua/src/linit.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/linit.c
+
+lua_liolib.o: $(srcdir)/lib/lua/src/liolib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/liolib.c
+
+lua_llex.o: $(srcdir)/lib/lua/src/llex.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/llex.c
+
+lua_lmathlib.o: $(srcdir)/lib/lua/src/lmathlib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lmathlib.c
+
+lua_lmem.o: $(srcdir)/lib/lua/src/lmem.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lmem.c
+
+lua_loadlib.o: $(srcdir)/lib/lua/src/loadlib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/loadlib.c
+
+lua_lobject.o: $(srcdir)/lib/lua/src/lobject.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lobject.c
+
+lua_lopcodes.o: $(srcdir)/lib/lua/src/lopcodes.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lopcodes.c
+
+lua_loslib.o: $(srcdir)/lib/lua/src/loslib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/loslib.c
+
+lua_lparser.o: $(srcdir)/lib/lua/src/lparser.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lparser.c
+
+lua_lstate.o: $(srcdir)/lib/lua/src/lstate.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lstate.c
+
+lua_lstring.o: $(srcdir)/lib/lua/src/lstring.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lstring.c
+
+lua_lstrlib.o: $(srcdir)/lib/lua/src/lstrlib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lstrlib.c
+
+lua_ltable.o: $(srcdir)/lib/lua/src/ltable.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ltable.c
+
+lua_ltablib.o: $(srcdir)/lib/lua/src/ltablib.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ltablib.c
+
+lua_ltm.o: $(srcdir)/lib/lua/src/ltm.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/ltm.c
+
+lua_lua.o: $(srcdir)/lib/lua/src/lua.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lua.c
+
+lua_luac.o: $(srcdir)/lib/lua/src/luac.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/luac.c
+
+lua_lundump.o: $(srcdir)/lib/lua/src/lundump.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lundump.c
+
+lua_lvm.o: $(srcdir)/lib/lua/src/lvm.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lvm.c
+
+lua_lzio.o: $(srcdir)/lib/lua/src/lzio.c
+	$(CCC) -c -o $@ $(LUA_CFLAGS) $(srcdir)/lib/lua/src/lzio.c
 
 mmex_aboutdialog.o: $(srcdir)/src/aboutdialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/aboutdialog.cpp
@@ -309,8 +471,8 @@ mmex_guiid.o: $(srcdir)/src/guiid.cpp
 mmex_htmlbuilder.o: $(srcdir)/src/htmlbuilder.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/htmlbuilder.cpp
 
-mmex_led.o: $(srcdir)/src/led.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/led.cpp
+mmex_lua_interface.o: $(srcdir)/src/lua_interface.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/lua_interface.cpp
 
 mmex_maincurrencydialog.o: $(srcdir)/src/maincurrencydialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/maincurrencydialog.cpp
@@ -332,6 +494,9 @@ mmex_mmcurrency.o: $(srcdir)/src/mmcurrency.cpp
 
 mmex_mmex.o: $(srcdir)/src/mmex.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/mmex.cpp
+
+mmex_mmex_settings.o: $(srcdir)/src/mmex_settings.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/mmex_settings.cpp
 
 mmex_mmgraphgenerator.o: $(srcdir)/src/mmgraphgenerator.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/mmgraphgenerator.cpp
@@ -360,9 +525,6 @@ mmex_mmreportspanel.o: $(srcdir)/src/mmreportspanel.cpp
 mmex_mmtransaction.o: $(srcdir)/src/mmtransaction.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/mmtransaction.cpp
 
-mmex_mmyahoo.o: $(srcdir)/src/mmyahoo.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/mmyahoo.cpp
-
 mmex_newacctdialog.o: $(srcdir)/src/newacctdialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/newacctdialog.cpp
 
@@ -375,8 +537,11 @@ mmex_paths.o: $(srcdir)/src/paths.cpp
 mmex_payeedialog.o: $(srcdir)/src/payeedialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/payeedialog.cpp
 
-mmex_qifimport.o: $(srcdir)/src/qifimport.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/qifimport.cpp
+mmex_qif_export.o: $(srcdir)/src/qif_export.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/qif_export.cpp
+
+mmex_qif_import.o: $(srcdir)/src/qif_import.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/qif_import.cpp
 
 mmex_recentfiles.o: $(srcdir)/src/recentfiles.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/recentfiles.cpp
@@ -386,51 +551,6 @@ mmex_relocatecategorydialog.o: $(srcdir)/src/relocatecategorydialog.cpp
 
 mmex_relocatepayeedialog.o: $(srcdir)/src/relocatepayeedialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/relocatepayeedialog.cpp
-
-mmex_reportbudget.o: $(srcdir)/src/reportbudget.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportbudget.cpp
-
-mmex_reportbudgetcategorysummary.o: $(srcdir)/src/reportbudgetcategorysummary.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportbudgetcategorysummary.cpp
-
-mmex_reportbudgetingperf.o: $(srcdir)/src/reportbudgetingperf.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportbudgetingperf.cpp
-
-mmex_reportcashflow.o: $(srcdir)/src/reportcashflow.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportcashflow.cpp
-
-mmex_reportcategexp.o: $(srcdir)/src/reportcategexp.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportcategexp.cpp
-
-mmex_reportcategovertimeperf.o: $(srcdir)/src/reportcategovertimeperf.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportcategovertimeperf.cpp
-
-mmex_reportincexpenses.o: $(srcdir)/src/reportincexpenses.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportincexpenses.cpp
-
-mmex_reportincexpensesfinancialperiod.o: $(srcdir)/src/reportincexpensesfinancialperiod.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportincexpensesfinancialperiod.cpp
-
-mmex_reportincexpesestime.o: $(srcdir)/src/reportincexpesestime.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportincexpesestime.cpp
-
-mmex_reportpayee.o: $(srcdir)/src/reportpayee.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportpayee.cpp
-
-mmex_reportsummary.o: $(srcdir)/src/reportsummary.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportsummary.cpp
-
-mmex_reportsummaryassets.o: $(srcdir)/src/reportsummaryassets.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportsummaryassets.cpp
-
-mmex_reportsummarystocks.o: $(srcdir)/src/reportsummarystocks.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reportsummarystocks.cpp
-
-mmex_reporttransactions.o: $(srcdir)/src/reporttransactions.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reporttransactions.cpp
-
-mmex_reporttransstats.o: $(srcdir)/src/reporttransstats.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reporttransstats.cpp
 
 mmex_splitdetailsdialog.o: $(srcdir)/src/splitdetailsdialog.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/splitdetailsdialog.cpp
@@ -456,14 +576,98 @@ mmex_univcsvdialog.o: $(srcdir)/src/univcsvdialog.cpp
 mmex_util.o: $(srcdir)/src/util.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/util.cpp
 
-mmex_yahoosettingsdialog.o: $(srcdir)/src/yahoosettingsdialog.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/yahoosettingsdialog.cpp
+mmex_budget.o: $(srcdir)/src/reports/budget.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/budget.cpp
+
+mmex_budgetcategorysummary.o: $(srcdir)/src/reports/budgetcategorysummary.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/budgetcategorysummary.cpp
+
+mmex_budgetingperf.o: $(srcdir)/src/reports/budgetingperf.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/budgetingperf.cpp
+
+mmex_cashflow.o: $(srcdir)/src/reports/cashflow.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/cashflow.cpp
+
+mmex_categexp.o: $(srcdir)/src/reports/categexp.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/categexp.cpp
+
+mmex_categovertimeperf.o: $(srcdir)/src/reports/categovertimeperf.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/categovertimeperf.cpp
+
+mmex_incexpenses.o: $(srcdir)/src/reports/incexpenses.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/incexpenses.cpp
+
+mmex_incexpensesfinancialperiod.o: $(srcdir)/src/reports/incexpensesfinancialperiod.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/incexpensesfinancialperiod.cpp
+
+mmex_incexpesestime.o: $(srcdir)/src/reports/incexpesestime.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/incexpesestime.cpp
+
+mmex_payee.o: $(srcdir)/src/reports/payee.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/payee.cpp
+
+mmex_summary.o: $(srcdir)/src/reports/summary.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/summary.cpp
+
+mmex_summaryassets.o: $(srcdir)/src/reports/summaryassets.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/summaryassets.cpp
+
+mmex_summarystocks.o: $(srcdir)/src/reports/summarystocks.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/summarystocks.cpp
+
+mmex_transactions.o: $(srcdir)/src/reports/transactions.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/transactions.cpp
+
+mmex_trx_stats.o: $(srcdir)/src/reports/trx_stats.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/trx_stats.cpp
+
+mmex_account.o: $(srcdir)/src/db/account.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/account.cpp
+
+mmex_assets.o: $(srcdir)/src/db/assets.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/assets.cpp
+
+mmex_budget_table.o: $(srcdir)/src/db/budget_table.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/budget_table.cpp
+
+mmex_budget_year.o: $(srcdir)/src/db/budget_year.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/budget_year.cpp
+
+mmex_category.o: $(srcdir)/src/db/category.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/category.cpp
+
+mmex_currency.o: $(srcdir)/src/db/currency.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/currency.cpp
+
+mmex_entry_base.o: $(srcdir)/src/db/entry_base.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/entry_base.cpp
+
+mmex_payee_table.o: $(srcdir)/src/db/payee_table.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/payee_table.cpp
+
+mmex_settings.o: $(srcdir)/src/db/settings.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/settings.cpp
+
+mmex_splittransaction.o: $(srcdir)/src/db/splittransaction.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/splittransaction.cpp
+
+mmex_stocks.o: $(srcdir)/src/db/stocks.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/stocks.cpp
+
+mmex_subcategory.o: $(srcdir)/src/db/subcategory.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/subcategory.cpp
+
+mmex_transaction.o: $(srcdir)/src/db/transaction.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/transaction.cpp
+
+mmex_transactionbill.o: $(srcdir)/src/db/transactionbill.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/db/transactionbill.cpp
 
 mmex_platfdep.o: $(srcdir)/src/unix/platfdep.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/unix/platfdep.cpp
 
 mmex_resources_mmex_rc.o: $(srcdir)/resources/mmex.rc
-	$(WX_RESCOMP) -i$< -o$@  --include-dir $(srcdir)/lib/sqlite --include-dir $(srcdir)/lib/wxsqlite --define NOPCH
+	$(WX_RESCOMP) -i$< -o$@  --include-dir $(srcdir)/lib/sqlite --include-dir $(srcdir)/lib/wxsqlite --include-dir $(srcdir)/lib/lua/src --define NOPCH
 
 
 # Include dependency info, if present:
