--- a/mmex/setup/linux/debian/control
+++ b/mmex/setup/linux/debian/control
@@ -2,7 +2,7 @@ Source: mmex
 Section: misc
 Priority: extra
 Maintainer: Nikolay <vomikan@mail.ru>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev, libwxgtk2.8-dev (>= 2.8.0), libboost-dev (>= 1.48.0), python-dev (>= 2.7.3), libreadline-dev (>=6.2)
+Build-Depends: debhelper (>= 8.0.0), autotools-dev, libwxgtk2.9-dev (>= 2.9.0), python-dev (>= 2.7.3), libreadline-dev (>=6.2)
 Standards-Version: 3.9.2
 Homepage: https://sourceforge.net/projects/moneymanagerex
 #Vcs-Git: git://git.debian.org/collab-maint/mmex.git
@@ -10,7 +10,7 @@ Homepage: https://sourceforge.net/projects/moneymanagerex
 
 Package: mmex
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libc6 (>= 2.3.5-1), libwxgtk2.8-0 (>= 2.8.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6 (>= 2.3.5-1), libwxgtk2.9-0 (>= 2.9.0)
 Description: Simple to use financial management software
  Money  Manager  Ex (MMEX) is a free, open-source,
  cross-platform, easy-to-use personal finance software.
