--- a/mmex/Makefile.in
+++ b/mmex/Makefile.in
@@ -156,7 +156,7 @@ MMEX_OBJECTS =  \
 	mmex_categexp.o \
 	mmex_categovertimeperf.o \
 	mmex_incexpenses.o \
-	mmex_incexpensesfinancialperiod.o \
+	mmex_mmDateRange.o \
 	mmex_mmRepeat.o \
 	mmex_payee.o \
 	mmex_summary.o \
@@ -597,8 +597,8 @@ mmex_categovertimeperf.o: $(srcdir)/src/reports/categovertimeperf.cpp
 mmex_incexpenses.o: $(srcdir)/src/reports/incexpenses.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/incexpenses.cpp
 
-mmex_incexpensesfinancialperiod.o: $(srcdir)/src/reports/incexpensesfinancialperiod.cpp
-	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/incexpensesfinancialperiod.cpp
+mmex_mmDateRange.o: $(srcdir)/src/reports/mmDateRange.cpp
+	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/mmDateRange.cpp
 
 mmex_mmRepeat.o: $(srcdir)/src/reports/mmRepeat.cpp
 	$(CXXC) -c -o $@ $(MMEX_CXXFLAGS) $(srcdir)/src/reports/mmRepeat.cpp
